# awg-easy

./: .gitignore  README.md  pyproject.toml
app/: awg.py  database.py  main.py  models.py  schemas.py  settings.py
tests/: test_api.py
